--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@table-library/react-table-library": "^4.1.15",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
+    "ka-table": "^12.0.3",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
